--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,8 +1,12 @@
 {
     "app": {
         "about": {
-            "title": "TEST: Über mich",
-            "text": "TEST: Als Frontend-Entwicklerin begeistere ich mich dafür, Ihre besten Ideen zu realisieren und Ihre Designs ansprechend umzusetzen."
+            "title": "Über mich",
+            "para-1": "Als Frontend-Entwicklerin begeistere ich mich dafür, Ihre besten Ideen zu realisieren und Ihre Designs ansprechend umzusetzen.",
+            "para-2": "Wenn Sie mich gerne für Ihre Projekte einsetzen möchten, kontaktieren Sie mich! Ich freue mich auf eine Position als Junior Developer.",
+            "base": "Wohnhaft in Wien",
+            "remote": "Gerne auch Telearbeit",
+            "btn-text": "Kontakt"
         }
     }
 }
