--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -15,6 +15,24 @@
         },
         "portfolio": {
             "main-text": "You want to see my skills in action? Explore a&nbsp;selection of my work here and interact with my projects."
+        },
+        "contact": {
+            "title": "Say hi!",
+            "subtitle": "Want to discuss a new project?",
+            "text": "Say hello! Let's discuss your ideas and make it happen.",
+            "link-legal-notice": "Legal notice"
+        },
+        "contact-form": {
+            "name": "Your name",
+            "name-notification": "Please enter your name.",
+            "mail": "Your email",
+            "mail-notification": "Please enter your email.",
+            "message": "Your message",
+            "message-notification": "Please enter a message.",
+            "privacy-text-1": "I've read the",
+            "privacy-text-2": "and agree to the processing of my data as outlined.",
+            "privacy-notification": "Please accept the privacy policy.",
+            "sent-notification": "Thank you for your message."
         }
     }
 }
