--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -33,6 +33,10 @@
             "privacy-text-2": "and agree to the processing of my data as outlined.",
             "privacy-notification": "Please accept the privacy policy.",
             "sent-notification": "Thank you for your message."
+        },
+        "privacy-policy": {
+            "title": "Privacy Policy",
+            "source": "Source:"
         }
     }
 }
