imprint ngx-translate completed

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -37,6 +37,9 @@
         "privacy-policy": {
             "title": "Datenschutzerklärung",
             "source": "Quelle:"
+        },
+        "imprint": {
+            "title": "Impressum"
         }
     }
 }
