--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -37,6 +37,9 @@
         "privacy-policy": {
             "title": "Privacy Policy",
             "source": "Source:"
+        },
+        "imprint": {
+            "title": "Legal Notice"
         }
     }
 }
