language switch options in header optimized

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -1,5 +1,8 @@
 {
     "app": {
+        "header": {
+            "language": "English"
+        },
         "about": {
             "title": "Über mich",
             "para-1": "Als Frontend-Entwicklerin begeistere ich mich dafür, Ihre besten Ideen zu realisieren und Ihre Designs ansprechend umzusetzen.",
