--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,5 +1,8 @@
 {
     "app": {
+        "header": {
+            "language": "Deutsch"
+        },
         "about": {
             "title": "About me",
             "para-1": "As a front-end developer, I&nbsp;enjoy helping designers and companies to bring their ideas into real life.",
