about me text updated

--- a/src/assets/i18n/de.json
+++ b/src/assets/i18n/de.json
@@ -10,7 +10,7 @@
         },
         "about": {
             "title": "Über mich",
-            "para-1": "Als Frontend Developerin begeistere ich mich dafür, Ihre besten Ideen zu realisieren und Ihre Designs ansprechend umzusetzen.",
+            "para-1": "Als Frontend Developerin mit zusätzlicher Backend-Erfahrung begeistere ich mich dafür, Ihre besten Ideen zu realisieren und Ihre Designs ansprechend umzusetzen.",
             "para-2": "Wenn Sie mich gerne für Ihre Projekte einsetzen möchten, kontaktieren Sie mich! Ich freue mich auf eine Position als Junior Developerin.",
             "base": "Wohnhaft in Wien",
             "remote": "Gerne auch remote",
