--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -10,7 +10,7 @@
         },
         "about": {
             "title": "About me",
-            "para-1": "As a front-end developer, I&nbsp;enjoy helping designers and companies to bring their ideas into real life.",
+            "para-1": "As a front-end developer with additional back-end experience, I&nbsp;enjoy helping designers and companies to bring their ideas into real life.",
             "para-2": "If you think I&nbsp;would be a&nbsp;good match for your projects, contact me! I&nbsp;am looking forward to a&nbsp;job in a&nbsp;junior developer position.",
             "base": "Based in Vienna",
             "remote": "Open to work remotely",
